# awesome-greek-tech-jobs

./: .all-contributorsrc  .gitignore  CONTRIBUTING.MD  Justfile  README.md  cliff.toml  code_of_conduct.md  contributing.md  development.md  employers.html  engineering-hubs.md  generate_readme.py  greek-tech-podcasts.md  index.html  job-search.html  lychee.toml  podcasts.html  pyproject.toml  readme.md  readme.yaml  remote-cafe-resources.md  resources.html  search-queries-and-resources.md  sitemap.xml
.github/ISSUE_TEMPLATE/: 01-company-data-correction.yml  02-add-company.yml  03-remove-company.yml  04-site-or-docs.yml  05-general.yml  06-add-or-update-podcast.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  automerge.yaml  pr-checks.yaml  pr-validation.yaml  release-on-main.yaml  sync-on-main-merge.yaml  update-readme.yaml
_data/: README.md  cafe_resources.yaml  open_source_projects.yaml  podcasts.yaml  queries.yaml  readme.yaml  workable_counts.yaml
assets/css/: index.css
assets/js/: index.js  site-chrome.js
data/: companies.yaml  queries.yaml  workable_counts.yaml
docs/: greek-tech-podcasts.md  readme.md
jekyll-pages/: Gemfile  _config.yml
job-search/: index.html
open-source/: index.html
scripts/: __init__.py  fetch_workable_counts.py  generate_index.py  generate_readme.py  jekyll_url_config.py
src/agse_site/: markdown_html.py  sitemap_robots.py
src/awesome_greek_software_engineering/: generate_index.py  generate_readme.py  jekyll_url_config.py
src/greek_software_ecosystem/: generate_index.py  (+1 more)
templates/: index_template.html
(+16 files in other folders)
