[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greek-software-ecosystem"
version = "0.0.0"
description = "Generator tooling for the Greek Software Ecosystem directory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "markdown>=3.5",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greek_software_ecosystem = ["py.typed", "templates/*.html"]
greek_software_site = ["py.typed"]
